@startuml gaussian_mc_simulation
!pragma useIntermediatePackages false
!define ABSTRACT &#123;abstract&#125;

abstract class monte_carlo_simulation.ImportanceSampling {
  _target_sampling_density: None
  ~_proposal_g_x(x, θ) \t\t ABSTRACT
  ~_sample_from_proposal_density_g(θ) \t\t ABSTRACT
}
abstract class monte_carlo_simulation.TargetSamplingDensity {
  +pdf(x)  \t\t ABSTRACT
  +sample(n_vars, n_sample_paths) \t\t ABSTRACT
}
class gaussian_mc_simulation.GaussianImportanceSampling {
}
class gaussian_mc_simulation.StandardNormalTargetSamplingDensity {
}

monte_carlo_simulation.TargetSamplingDensity <|-- gaussian_mc_simulation.StandardNormalTargetSamplingDensity
monte_carlo_simulation.ImportanceSampling <|-- gaussian_mc_simulation.GaussianImportanceSampling
footer Generated by //py2puml//
@enduml
